# Swipe

./: .env.example  .gitignore  Dockerfile  conftest.py  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 1a27a5ab8dcc_change_float_to_decimal.py  23274f0ef27c_initial_structure.py  28a0bfba68a5_final_db_structure.py  3e076fde4dc8_initial_migration.py  434bd319ced7_initial_tables.py  6d417e615d0d_move_number_to_apartment.py  812076939524_initial_modular_architecture.py  85cfda67962f_add_agent_contacts_table.py  aa236488ff8a_add_secondary_market_and_requests.py  afa04416fb3e_add_cascade_delete_users.py
nginx/: Dockerfile  __init__.py  nginx.conf
src/: app.py  celery.py  cli.py  config.py  container.py  container_factory.py  database.py  lifecycle.py  main.py  worker.py
src/common/: __init__.py  docs.py  exceptions.py  pagination.py  schemas.py  utils.py
src/core/: config.py  docs.py  enum.py  exceptions.py  lifecycle.py  pagination.py  utils.py
src/infrastructure/: __init__.py  celery.py  depends.py  provider.py  storage.py
src/models/: __init__.py  base.py  real_estate.py  users.py
src/repositories/: __init__.py  announcements.py  chessboard.py  favorites.py  houses.py  promotions.py  real_estate.py  saved_searches.py  subscriptions.py  users.py
src/routes/: announcements.py  auth.py  chessboard.py  deps.py  favorites.py  houses.py  promotions.py  real_estate.py  saved_searches.py  system.py  user_profile.py  users.py
src/schemas/: auth.py  real_estate.py  response.py  (+2 more)
tests/: .env.test  conftest.py  utils.py
(+143 files in other folders)
